# RasperifyScanner

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  raspinfo.txt  requirements-dev.txt  requirements.txt
backend/app/api/: websocket.py
backend/app/api/routes/: analyze.py  auth.py  camera.py  config.py  events.py  health.py  results.py  schedules.py
backend/app/config/: settings.py
backend/app/models/: database.py  orm.py  schemas.py
backend/app/services/: auth.py  camera.py  connection.py  events.py  pipeline.py  scheduler.py
backend/app/services/ai/: base.py  gemini.py  multi_provider.py  ollama.py  openai_provider.py  prompts.py
backend/app/services/detection/: __init__.py  base.py  coco_labels.py  onnx_yolo.py  service.py  tracker.py
backend/app/services/network/: base.py  ethernet.py  manager.py  usb.py  wifi.py
backend/app/utils/: image.py
backend/scripts/: setup_local.py  verify_pipeline.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_ai_providers.py  test_auth_service.py  test_detection.py  test_schemas.py
config/: network.yml  scanner.yml
docs/: API_REFERENCE.md  LOCAL_AI_SETUP.md  PI_SETUP.md  PI_SETUP_LINUX.md  PI_SETUP_MACOS.md  PI_SETUP_WINDOWS.md  PROJECT_OVERVIEW.md  SETUP_GUIDE.md
frontend/: Dockerfile  app.json  jest.config.js  jest.setup.ts  package-lock.json  package.json
frontend/app/: _layout.tsx  index.tsx  login.tsx
frontend/components/: Badge.tsx  Card.tsx  ConfigPanel.tsx  (+5 more)
(+22 files in other folders)
