[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rasperify-scanner-backend"
version = "1.0.0"
description = "FastAPI backend for RasperifyScanner — AI-powered Raspberry Pi camera analysis"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.flake8]
max-line-length = 100
exclude = [".venv", "venv", "__pycache__"]
